--- a/ch04/gallery.html
+++ b/ch04/gallery.html
@@ -17,32 +17,6 @@
         <a href="#"><img src="../images/img1.jpg" alt="새의 사진" id = "gallery"></a>
         <a href="#" onclick="nextGallery()"><img src="../images/right_btn.png" alt="오른쪽 버튼"></a>
     </div>    
-    <script>
-        //오른쪽 이미지 클릭하면 이미지 넘기기
-        var num = 1;
-        function nextGallery(){
-            num++;
-            if(num>7){
-                num =1;
-            }
-            document.getElementById('gallery').src ="../images/img"+num+".jpg";
-        }
-        function preGallery(){
-            num--;
-            if(num=0){
-                num = 7;
-            }
-            document.getElementById('gallery').src ="../images/img"+num+".jpg";
-        }
-        
-        // function preGallery(){
-            
-        //     if(num<2){
-        //         num = 8;
-        //     }
-        //     num--;
-        //     document.getElementById('gallery').src ="../images/img"+num+".jpg";
-        // }
-    </script>
+    <script src="../js/gallery.js"></script>
 </body>
 </html>
