--- a/ch05/object/random-ex2.html
+++ b/ch05/object/random-ex2.html
@@ -12,10 +12,10 @@
         //11이면 "Eleven Thrown!"이고, 주사위 눈이 같으면 "Double Thrown!"
 
         for(i=1;i<11;i++){
+        //주사위 2개를 만들고 합계를 출력하기
             var dice1 = Math.floor(Math.random()*6) +1;
             var dice2 = Math.floor(Math.random()*6) +1;
             var total = dice1 + dice2;
-
             // console.log("dice1 = " + dice1);
             // console.log("dice2 = " + dice2);
             // console.log("total = " + total);
